[package]
name = "unproxy"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.14"
snafu = "0.5.0"
hyper = "=0.13.0-alpha.4"
hyper-tls = "0.4.0-alpha.4"
tokio = "=0.2.0-alpha.6"
http = "0.1.18"
tokio-io = "0.2.0-alpha.6"
