[package]
name = "unproxy"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures-util= "0.3.0"
hyper = "0.13.0"
hyper-tls = "0.4.0"
structopt = "0.2.14"
tokio = { version = "0.2.0", features = ["macros"] }
