[package]
name = "unproxy"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-executor = "0.1.2"
async-io = "0.1.5"
futures-lite = "0.1.9"
futures-util= "0.3.11"
structopt = "0.2.14"
async-dup = "1.2.1"
